[package]
name = "r2pipe"
version = "0.5.0"
authors = [
  "pancake <pancake@nopcode.org>",
  "sushant94 <sushant.dinesh94@gmail.com>"
]
edition = "2018"
description = "Library to interact with radare2 using r2pipes."

# Repository
repository = "https://github.com/radare/r2pipe.rs"
documentation = "https://radare.github.io/r2pipe.rs/"

keywords = ["r2", "debugger", "hex" , "editor", "radare"]

# Readme link
readme = "README.md"

# License information
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
libc = "0.2.71"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9"
