[package]
name = "r2pipe"
version = "0.7.0"
authors = [
  "pancake <pancake@nopcode.org>",
  "sushant94 <sushant.dinesh94@gmail.com>"
]
edition = "2018"
description = "Library to interact with radare2 using r2pipes."

# Repository
repository = "https://github.com/radare/r2pipe.rs"
documentation = "https://radare.github.io/r2pipe.rs/"

keywords = ["r2", "debugger", "hex" , "editor", "radare"]

# Readme link
readme = "README.md"

# License information
license = "MIT OR Apache-2.0"

[features]
docsrs = []
http = []

[dependencies]
libloading = "0.8"
libc = "0.2"
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
thiserror = "1"
